<resources>
    <string name="app_name">Notes</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="login">LOGIN</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
</resources>



